--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.4) rote; urgency=low
+
+  * added 17-agustus.png
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Thu, 16 Aug 2012 11:26:53 +0700
+
 blankon-wallpapers (0.3) rote; urgency=low
 
   * Fix duplicate rote.xml.
