--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.5) suroboyo; urgency=low
+
+  * Suroboyo wallpaper
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Sat, 08 Dec 2012 14:12:26 +0700
+
 blankon-wallpapers (0.4) rote; urgency=low
 
   * added 17-agustus.png
