--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.6) suroboyo; urgency=low
+
+  * Added new contextual wallpaper
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Sat, 08 Dec 2012 19:56:46 +0700
+
 blankon-wallpapers (0.5) suroboyo; urgency=low
 
   * Suroboyo wallpaper
