remove suroboyo folder

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.7) suroboyo; urgency=low
+
+  * remove suroboyo folder
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Mon, 10 Dec 2012 19:57:40 +0700
+
 blankon-wallpapers (0.6) suroboyo; urgency=low
 
   * Added new contextual wallpaper
