--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.8) suroboyo; urgency=low
+
+  * conflicts blankon-wallpapers-rote
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Wed, 19 Dec 2012 14:09:39 +0700
+
 blankon-wallpapers (0.7) suroboyo; urgency=low
 
   * remove suroboyo folder
