--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.8.2) suroboyo; urgency=low
+
+  * Updates wallpaper
+
+ -- princeofgiri <princeofgiri@di.blankon.in>  Wed, 16 Oct 2013 19:51:31 +0700
+
 blankon-wallpapers (0.8.1) suroboyo; urgency=low
 
   * Replaces blankon-wallpapers-rote
