--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.8.4) suroboyo; urgency=low
+
+  * Added extra wallpaper
+
+ -- mijortsa <mijortsa@toshi>  Fri, 08 Nov 2013 21:29:45 +0700
+
 blankon-wallpapers (0.8.3) suroboyo; urgency=low
 
   * debian/control:
