First upload to tambora

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.8.7) tambora; urgency=low
+
+  * First upload to tambora
+
+ -- Syai Mif <syai.unipdu@gmail.com>  Wed, 05 Mar 2014 11:05:31 +0700
+
 blankon-wallpapers (0.8.6) suroboyo-updates; urgency=low
 
   * Add extra wallpaper
