--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.0) tambora; urgency=medium
+
+  * New upstream release
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Wed, 05 Mar 2014 22:37:39 +0700
+
 blankon-wallpapers (0.8.7) tambora; urgency=low
 
   * First upload to tambora
