--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.1) tambora; urgency=low
+
+  * Added two photo Lasiana Beach by Yususf Sulaiman
+
+ -- Mahyuddin Ramli <yudi.al@gmail.com>  Wed, 14 May 2014 08:25:16 +0700
+
 blankon-wallpapers (0.10.0) tambora; urgency=medium
 
   * New upstream release
