--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.3) tambora; urgency=low
+
+  * Upstream versi
+
+ -- Mijortsa <azis.astrojim@surabaya.di.blankon.in>  Thu, 16 Apr 2015 14:48:44 +0700
+
 blankon-wallpapers (0.10.2) tambora; urgency=low
 
   * Added more wallpaper
