--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blankon-wallpapers (0.10.4) tambora; urgency=low
+
+  * Add Sunrise.png by Sokhibi
+  * remove OIX.png
+
+ -- Mijortsa <azis.astrojim@surabaya.di.blankon.in>  Thu, 30 Apr 2015 00:59:30 +0700
+
 blankon-wallpapers (0.10.3) tambora; urgency=low
 
   * Upstream versi
