--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blankon-wallpapers (0.10.5) tambora; urgency=medium
+
+  * Add Gulali.png by Azis Ws
+  * remove Bunga_1.png
+
+ -- Syai Mif <syaimif@di.blankon.in>  Sat, 02 May 2015 10:23:32 +0700
+
 blankon-wallpapers (0.10.4) tambora; urgency=low
 
   * Add Sunrise.png by Sokhibi
