--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.6) tambora; urgency=medium
+
+  * Add Cendawan.jpg by Herpiko
+
+ -- Mijortsa <azis.astrojim@surabaya.di.blankon.in>  Sat, 16 May 2015 09:04:45 +0700
+
 blankon-wallpapers (0.10.5) tambora; urgency=medium
 
   * Add Gulali.png by Azis Ws
