tambah batik,bunga,daun,mosaic

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.7) tambora; urgency=medium
+
+  * tambah batik,bunga,daun,mosaic 
+
+ -- Aris Winardi <me@arwin.my.id>  Mon, 28 Sep 2015 23:28:18 +0700
+
 blankon-wallpapers (0.10.6) tambora; urgency=medium
 
   * Add Cendawan.jpg by Herpiko
