--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+blankon-wallpapers (0.10.8) tambora; urgency=medium
+
+  * New upstream relase
+   - Added xecure-wallpapers contextual and xecure-wallpapers.xml.in
+   - Added xecure.xml /contex
+   - Added xecure-wallpapers.install
+   - Modify in blankon-wallpapers.postint 
+
+ -- Syai Mif <syaimif@di.blankon.in>  Tue, 07 Jun 2016 14:47:11 +0700
+
 blankon-wallpapers (0.10.7) tambora; urgency=medium
 
   * tambah batik,bunga,daun,mosaic 
