--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.9) tambora; urgency=medium
+
+  * Add Mosaic_1_Red.png 
+
+ -- dotovr <dotovr@preko>  Wed, 13 Jul 2016 20:54:44 +0700
+
 blankon-wallpapers (0.10.8) tambora; urgency=medium
 
   * New upstream relase
