--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.10) tambora; urgency=medium
+
+  * Add Sukabumi.jpg
+
+ -- Syai Mif <syaimif@localhost>  Sun, 17 Jul 2016 13:44:01 +0700
+
 blankon-wallpapers (0.10.9) tambora; urgency=medium
 
   * Add Mosaic_1_Red.png 
