--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.12) tambora-update; urgency=medium
+
+  * resubmit
+
+ -- AnTo SamalonA <antosamalona@masDell>  Wed, 11 Jan 2017 21:49:11 +0800
+
 blankon-wallpapers (0.10.11) tambora; urgency=medium
 
   * Add Boni_1.png,Boni_2.png,Boni_3.png,Boni_4.png
