--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-blankon-wallpapers (0.10.12) tambora-update; urgency=medium
+blankon-wallpapers (0.10.12) tambora-updates; urgency=medium
 
   * resubmit
 
