fixed typo Boni_4.png in wallpapers

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.13) tambora-updates; urgency=medium
+
+  * fix typo of Boni_4.png in wallpapers
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 18 Mar 2017 19:27:13 +0800
+
 blankon-wallpapers (0.10.12) tambora-updates; urgency=medium
 
   * resubmit
