--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.14) uluwatu; urgency=medium
+
+  * Upload to uluwatu
+
+ -- Anto Samalona <ansamsoftdev@gmail.com>  Thu, 11 May 2017 21:36:35 +0800
+
 blankon-wallpapers (0.10.13) tambora-updates; urgency=medium
 
   * fix typo of Boni_4.png in wallpapers
