--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+blankon-wallpapers (0.10.15) uluwatu; urgency=medium
+
+  * remove tambora wallpaper
+  * add uluwatu wallpaper
+  * add script for generate xml
+
+ -- Aris Winardi <ariswinardy@gmail.com>  Tue, 15 Aug 2017 11:37:30 +0700
+
 blankon-wallpapers (0.10.14) uluwatu; urgency=medium
 
   * Upload to uluwatu
