--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.17) uluwatu; urgency=medium
+
+  * Change postins to uluwatu
+
+ -- Aris Winardi <ariswinardy@gmail.com>  Tue, 15 Aug 2017 12:09:49 +0700
+
 blankon-wallpapers (0.10.16) uluwatu; urgency=medium
 
   * fix contex/uluwatu.xml
