Change tambora to uluwatu in blankon-wallpapers.xml.in

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.19) uluwatu; urgency=medium
+
+  * change tambora to uluwatu in blankon-wallpapers.xml.in
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 15 Aug 2017 22:25:58 +0800
+
 blankon-wallpapers (0.10.18) uluwatu; urgency=medium
 
   * update POTFILES
