--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-wallpapers (0.10.19) uluwatu; urgency=medium
+
+  * change control to uluwatu
+
+ -- Aris Winardi <ariswinardy@gmail.com>  Tue, 15 Aug 2017 21:27:08 +0700
+
 blankon-wallpapers (0.10.18) uluwatu; urgency=medium
 
   * update POTFILES
